# ctfcup2025-quals

./: README.md
tasks/beginners/babycrypto/: README.md
tasks/beginners/babycrypto/dev/: flag.txt
tasks/beginners/babycrypto/solve/: decrypt.py
tasks/beginners/babyfor/: README.md
tasks/beginners/babyfor/dev/: Definitely Not A Hidden Presentation With A Flag.pptx  flag.txt
tasks/beginners/babyfor/solve/: README.md
tasks/beginners/babymisc/: README.md
tasks/beginners/babymisc/deploy/: docker-compose.yml
tasks/beginners/babymisc/dev/: flag.txt
tasks/beginners/babymisc/solve/: solve.py
tasks/beginners/babyosint/: README.md
tasks/beginners/babyppc/: Readme.md
tasks/beginners/babyppc/deploy/: Dockerfile  compose.yml
tasks/beginners/babypwn/: README.md
tasks/beginners/babyrev/: README.md
tasks/beginners/babyweb/: README.md
tasks/crypto/cursed/: Readme.md  prepare-public.sh
tasks/crypto/miracle/: Readme.md
tasks/forensic/BimboIncident/: README.md
tasks/forensic/Funeral/: README.md
tasks/forensic/brokilon/: README.md
tasks/pwn/bad_parser/: README.md
tasks/pwn/play_with_ker/: README.md
tasks/pwn/safelang/: prepare-public.sh
tasks/pwn/safelang-revenge/: Readme.md
tasks/pwn/safelang-revenge-revenge/: prepare-public.sh
tasks/reverse/Wincrack/: README.md
tasks/reverse/annabelle/: Readme.md
tasks/reverse/nanomachines/: Readme.md
tasks/reverse/nanomachines/dev/: Cargo.toml
tasks/reverse/nanomachines/dev/src/: main.rs
tasks/web/goose-revenge/: Readme.md  prepare-public.sh
tasks/web/trustmebroker/: README.md
(+131 files in other folders)
